@startuml Lirium-Back-Modelo-Datos

!define ENTITY class
!define ENUM enum

' Enums
ENUM UserStatus {
    ACTIVE
    SUSPENDED
    DELETED
}

ENUM PlanType {
    FREE
    PREMIUM_MONTHLY
    PREMIUM_ANNUAL
}

ENUM SubscriptionStatus {
    NONE
    ACTIVE
    CANCELLED
    EXPIRED
}

ENUM PaymentAttemptStatus {
    CREATED
    APPROVED
    REJECTED
    CANCELLED
}

ENUM VideoStatus {
    PENDING
    GENERATED
    FAILED
}

ENUM PaymentMethod {
    CARD
    PAYPAL
    WALLETS
}

ENUM ReactionType {
    HEART
    CANDLE
    PRAY
    LIKE
}

' Entidades principales
ENTITY Role {
    +Long idRole
    +String name
    --
    +assignPermission(): void
}

ENTITY Permission {
    +Long idPermission
    +String name
    +String description
    --
    +validateAccess(): boolean
}

ENTITY RolePermission {
    +Long idRolePermission
    --
    +linkRolePermission(): void
}

ENTITY User {
    +Long idUser
    +String firstName
    +String firstLastName
    +String secondLastName
    +String email
    +String passwordHash
    +UserStatus status
    +double usedSpace
    +double totalCapacity
    +LocalDate createdDate
    +LocalDate updatedDate
    +LocalDateTime lastSessionDate
    --
    +createMemorial(): void
    +addCollaborator(): void
    +registerMemory(): void
}

ENTITY Memorial {
    +Long idMemorial
    +String name
    +String nickname
    +LocalDate birthDate
    +String gender
    +String description
    +String relationType
    +String profilePhoto_URL
    +String cover_URL
    +boolean isCollaborative
    +boolean isJournal
    +double usedSpace
    +LocalDateTime createdDate
    +LocalDateTime updatedDate
}

ENTITY QuestionCategory {
    +Long idQuestionCategory
    +String name
}

ENTITY Question {
    +Long idQuestion
    +String text
    +boolean isOwn
}

ENTITY Answer {
    +Long idAnswer
    +String content
}

ENTITY Memory {
    +Long idMemory
    +String type
    +String associatedQuestion
    +String title
    +String description
    +LocalDate photoDate
    +String location
    +boolean visible
    +String s3key_URL
    +double usedSpace
    +List<String> tags
    +LocalDateTime createdDate
    +LocalDateTime updatedDate
}

ENTITY Collaborator {
    +Long idCollaborator
    +String invitationStatus
    --
    +registerMemory(): void
}

ENTITY Comment {
    +Long idComment
    +String body
    +LocalDateTime createdDate
}

ENTITY Reaction {
    +Long idReaction
    +ReactionType type
    +LocalDateTime createdDate
}

ENTITY Plan {
    +Long idPlan
    +PlanType planType
    +String description
    +Double price
    +String currency
    +Boolean active
}

ENTITY Subscription {
    +Long idSubscription
    +int userId
    +int planId
    +PlanType planType
    +SubscriptionStatus status
    +LocalDateTime startDate
    +LocalDateTime endDate
    +PaymentMethod currentPaymentMethod
    +LocalDateTime createdDate
    +LocalDateTime updatedDate
}

ENTITY PaymentAttempt {
    +Long idPaymentAttempt
    +int userId
    +int planId
    +double amount
    +PaymentAttemptStatus status
    +String notes
    +LocalDateTime createdDate
    +LocalDateTime updatedDate
}

ENTITY GeneratedVideo {
    +Long idReel
    +String prompt
    +String title
    +String description
    +String s3key_URL
    +VideoStatus reelStatus
    +String type
    +LocalDateTime createdDate
    +LocalDateTime updatedDate
}

ENTITY Event {
    +Long idEvent
    +String title
    +String description
    +LocalDateTime date
}

ENTITY Reminder {
    +Long idReminder
    +int userId
    +String title
    +String description
    +LocalDateTime notificationDate
    +boolean active
    +LocalDateTime createdDate
    +LocalDateTime updatedDate
}

' Relaciones
User }|--|| Role : role
User ||--o{ Memorial : user
User ||--o{ Collaborator : user
User ||--o{ Comment : user
User ||--o{ Reaction : user
User ||--o{ Subscription : user
User ||--o{ PaymentAttempt : user
User ||--o{ GeneratedVideo : creator
User ||--o{ Reminder : user
User ||--o{ Question : author

Role ||--o{ RolePermission : role
Permission ||--o{ RolePermission : permission

Memorial ||--o{ Memory : memorial
Memorial ||--o{ Event : memorial

QuestionCategory ||--o{ Question : category

Question ||--o{ Answer : question

Memory }o--o| Question : question
Memory }o--o| Answer : answer
Memory }o--|| User : author
Memory ||--o{ Collaborator : memory
Memory ||--o{ Comment : memory
Memory ||--o{ Reaction : memory
Memory ||--o{ GeneratedVideo : memory

Plan ||--o{ Subscription : plan
Plan ||--o{ PaymentAttempt : plan

' Relaciones con enums
User ||--o{ UserStatus
Subscription ||--o{ SubscriptionStatus
Subscription ||--o{ PaymentMethod
PaymentAttempt ||--o{ PaymentAttemptStatus
GeneratedVideo ||--o{ VideoStatus
Reaction ||--o{ ReactionType
Plan ||--o{ PlanType

@enduml